--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Posts</title>
+    <title>Social Posts BONUS</title>
 
     <script src="https://kit.fontawesome.com/1e3be9b4ce.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h1 class="main-title">Social Posts BONUS</h1>
+    <h1 class="main-title">Social Posts</h1>
 
     <div id="container" class="posts-list">
 
